syntax = "proto3";
option go_package = "/chain;pbChain";
package chain;

message CommonResp{
    int32   errCode = 1;
    string  errMsg = 2;
}

message WithdrawTransferReq {
    string OperationID =1;
    string UserId = 2;
    int64  Amount = 3;
    int32 Decimal = 4;
    int64 WithdrawId = 5;
    string Contract = 6;
    int64 ChainId = 7;
    string Endpoint = 8;
}

message WithdrawTransferResp{
    CommonResp CommonResp = 1;
    string ChainUpLogId = 2;
    string TxHash = 3;
}


service chainService{
    rpc WithdrawTransfer(WithdrawTransferReq) returns (WithdrawTransferResp);
}
